# BiSeNet_1BR2

./: README.md  tensorrt-python.sh
ev_sdk/: .gitignore  CMakeLists.txt  Dockerfile  README.md
ev_sdk/3rd/BiSeNet/: CMakeLists.txt
ev_sdk/3rd/BiSeNet/include/.ipynb_checkpoints/: trt_dep-checkpoint.hpp
ev_sdk/3rd/BiSeNet/src/.ipynb_checkpoints/: segment-checkpoint.cpp  trt_dep-checkpoint.cpp
ev_sdk/include/: BiSeNetTRT.hpp
ev_sdk/src/: BiSeNetTRT.cpp  ji.cpp  ji.py  trt.py
others/TensorRT-8.0.1/include/: NvOnnxParser.h
train/log/: log.txt
train/src_repo/: split_dataset.py  start_train.sh
train/src_repo/BiSeNet/: requirements.txt
train/src_repo/BiSeNet/configs/: bisenetv1_city.py  bisenetv1_coco.py  bisenetv2_city.py  bisenetv2_coco.py  bisenetv2_expressage.py
train/src_repo/BiSeNet/lib/: base_dataset.py  cityscapes_cv2.py  expressage.py  get_dataloader.py
train/src_repo/BiSeNet/lib/models/: bisenetv2.py
train/src_repo/BiSeNet/tools/: train_amp.py
